2.0.112 (2024-01-19)

- Fixed image variants slider in image mode
- Fixed vision checkbox visibility
- Added config option for disable opening image dialog after generate
- Added Scheduled tasks entry in taskbar dropdown
- Added * (asterisk) indicator after date modified if newer than last indexed time
- Date of modified in file explorer changed to format YYYY-MM-DD HH:MM:SS

2.0.111 (2024-01-19)

- Fixed: opening files and directories in Snap and Windows versions
- Fixed: camera capture handling between mode switch
- Added: info about snap connect camera in Snap version (if not connected)
- Added: missing app/tray icon in compiled versions

2.0.110 (2024-01-19)

- Fixed bug: history file clear on ctx remove - issue #9
- Vision inline allowed in modes: Langchain and Chat with files (llama-index)
- Event names moved to Event class

2.0.109 (2024-01-18)

- Fixed bug: float inputs value update behaviour - issue #8
- Added: plugin description tooltips - issue #7
- Added: focus window on "New context..." in tray - issue #13
- Added: Ask with screenshot option to tray menu - issue #11
- Added: Open Notepad option to tray menu - issue #14

2.0.108 (2024-01-16)

- Added confirmation dialogs on indexing
- Added missing translations
- Updated dependencies: openai, cryptography, certifi, urllib, jinja

2.0.107 (2024-01-16)

- Fixed model change in vision plugin
- Fixed completion API error
- Removed deprecated davinci and replaced with 3.5-turbo-instruct model

2.0.106 (2024-01-15)

- Added "undo" action in drawing window
- Refactored locale handling
- Improved locale and theme overriding

2.0.105 (2024-01-15)

- Extended 'Theme' menu with new options
- 'Index (llama-index)' mode changed name to 'Chat with files' mode
- Refactored theme controller
- Fixed model config providing to llama-index mode

2.0.104 (2024-01-14)

- Langchain support refactored and fixed
- Added editor for models